--- a/src/app/componentes/datos-de-tareas/datos-de-tareas.component.html
+++ b/src/app/componentes/datos-de-tareas/datos-de-tareas.component.html
@@ -1,4 +1,14 @@
-<div class="container" id="export-presupuesto">
+<div
+  class="container"
+  id="export-presupuesto"
+  [ngStyle]="{
+    '--scheme-primary': colorScheme.primaryColor,
+    '--scheme-secondary': colorScheme.secondaryColor,
+    '--scheme-accent': colorScheme.accentColor,
+    '--scheme-text': colorScheme.textColor,
+    '--scheme-table-text': colorScheme.tableTextColor
+  }"
+>
 
  <button
     class="btn btn-secondary btn-floating"
@@ -9,7 +19,7 @@
     <i class="bi bi-house-door-fill"></i> inicio
   </button>
 
-  <div *ngIf="empresaSeleccionada && clienteSeleccionado" class="empresa-asociada mb-4">
+  <div *ngIf="empresaSeleccionada && clienteSeleccionado" class="empresa-asociada presupuesto-info mb-4">
     <div class="empresa-card">
       <div class="empresa-logo">
         <img *ngIf="empresaSeleccionada.logoUrl" [src]="empresaSeleccionada.logoUrl" alt="Logo" />
